# robot_monitoring

./: .gitignore  .gitmodules  .travis.yml  AuxSelector.qml  CMakeLists.txt  ClientEndpoint.qml  FieldValueForm.ui.qml  PlotButton.qml  README.md  SeparatorForm.ui.qml  SingleJointState.qml  SingleJointStateForm.ui.qml  VERSION_BUMP.md  data.js  input.txt  main.qml  my.keystore.enc  package.xml  qml.qrc
client/: CMakeLists.txt  ClientEndpoint.qml  CommonProperties.qml  HelloScreen.qml  HelloScreenForm.ui.qml  Monitoring.qml  PageItem.qml  client.js  main.cpp  main.js  main.qml  qml.qmlproject.qtds  qml.qrc  sharedData.js  websocket_receiver.cpp  websocket_receiver.h
client/BarPlot/: BarPlot.qml  BarPlotForm.ui.qml  BarPlotItem.qml  BarPlotItemForm.ui.qml  BarPlotStack.qml  ReferenceMarker.ui.qml  TwoSideBar.qml  TwoSideBarForm.ui.qml  logic.js
client/Cartesian/: Cartesian.qml  Pad.qml  PadForm.ui.qml  cartesian.js
client/Common/: Card.qml  CommonProperties.qml  MultiColumnPage.qml  SectionHeader.qml
client/Console/: ConfigurePanel.qml  Console.qml  Plugins.qml  Process.qml  ProcessForm.ui.qml  SinglePlugin.qml  Xbot2.qml  configure_panel.js
client/Home/: HelloScreen.qml  ServerStatusCard.qml
client/Joy/: Joy.js  Joy.qml  JoyCartesianCard.qml  Pad.qml  PadForm.ui.qml
client/Launcher/: ConfigurePanel.qml  Console.qml  ConsoleCard.qml  Launcher.js  Launcher.qml  PluginCard.qml  ProcessCard.qml
client/LivePlot/: Plotter.qml
client/Menu/: Hamburger.qml  MenuEntry.qml  MenuHeader.qml  NavDrawer.qml  NavIcon.qml  SlidingMenu.qml
client/Monitoring/: JointCommandCard.qml  JointDevice.qml  Monitoring.js  Monitoring.qml  RobotModelViewer.js  RobotModelViewer.qml
client/Plotter/: Plotter.qml  PlotterLegend.qml
client/Protobuf/: CMakeLists.txt  joint_states.proto  tlv.proto
client/RobotModel/: CMakeLists.txt  robot_model.cpp  robot_model.h
client/SingleJointState/: AuxSelector.qml  FieldValue.qml  FieldValueForm.ui.qml  PlotButton.qml  PlotButtonForm.ui.qml  Separator.qml  SingleJointState.qml  SingleJointStateForm.ui.qml  SingleJointStateStack.qml  SingleJointStateStackForm.ui.qml  data.js  qml.qrc
client/TestThings/: AspectRatio.qml  Card.qml  Card1.qml  ConcertGuidedDrilling.qml  Console.qml  ConsoleCard.js  ConsoleCard.qml  DebugRectangle.qml  DoubleSpinBox.qml  Hamburger.qml  JointDevice.qml  Joy.qml  JoyCartesianCard.qml  LabeledProgressBar.qml  Launcher.qml  LauncherConsoleItem.qml  MaterialResponsiveGrid.qml  Monitoring.qml  MultiColumnPage.qml  NavBar.qml  NavDrawer.qml  NavIcon.qml  Playground.qml  PluginCard.qml  PluginStatus.qml  ProcessCard.qml  ProcessStatus.qml  RailMenu.qml  TestPage.qml  VideoStream.js  VideoStream.qml  VideoStreamCard.qml  Viewer3D.qml
client/Video/: VideoStream.qml  VideoStreamCard.qml  VideoStreamFrontend.qml  video.js  videoiodevice.cpp  videoiodevice.h  videostreampainter.cpp  videostreampainter.h  yuv2rgb.frag  yuv2rgb.frag.qsb  yuv2rgb.vert
client/Viewer3D/: CameraController.qml  CustomOrbitalController.qml  RobotModel.js  RobotModel.qml  RobotModelNode.js  RobotModelNode.qml  RobotModelViewer.js  RobotModelViewer.qml  SunLight.qml  Viewer3D.qml  VisualEntity.qml
client/ViewerQuick3D/: meshgeometry.cpp  meshgeometry.h
server/: cartesian.py  concert.py  deploy.bash  joint_device.py  joint_states.py  main.py  process.py  pyproject.toml  screen_session.py  server.py  server_config.yaml  setup.cfg  setup.py  theora_video.py  utils.py  visual.py  xbot2_web_server.py
server/proto/: joint_states_pb2.py  tlv_pb2.py
src/automatica/: CMakeLists.txt  automatica_widget.cpp  automatica_widget.h
src/aux/: CMakeLists.txt  aux.ui  aux_ui_resources.qrc  aux_widget.cpp  aux_widget.h
src/chart/: CMakeLists.txt  chart.cpp  chart.h  right_panel.ui
src/gripper/: CMakeLists.txt  gripper.ui  gripper_ui_resources.qrc  gripper_widget.cpp  gripper_widget.h
src/imu/: CMakeLists.txt  imu.ui  imu_ui_resources.qrc  imu_widget.cpp  imu_widget.h
src/joint_sliders/: CMakeLists.txt  sliders_rqt.cpp  sliders_rviz_panel.cpp  sliders_widget.cpp  sliders_widget.h  sliders_widget_main.cpp  sliders_widget_mainview.cpp  sliders_widget_mainview.h  sliders_widget_resources.qrc
src/joint_state_gui/: CMakeLists.txt  bar_plot_widget.cpp  bar_plot_widget.h  bar_plot_widget.ui  bringup.ui  bringup_widget.cpp  bringup_widget.h  circle_widget.cpp  circle_widget.h  console.ui  joint_bar_widget.cpp  joint_bar_widget.h  joint_bar_widget.ui  joint_monitor_widget.cpp  joint_monitor_widget.h  joint_state_widget.cpp  joint_state_widget.h  joint_state_widget.ui  load_plugin.ui  load_plugin_wid.cpp  load_plugin_wid.h  top_right_tab.cpp  top_right_tab.h  ui_main.cpp  ui_resources.qrc  xbot2.ui  xbot2_plugin.ui  xbot2_plugin_wid.cpp  xbot2_plugin_wid.h  xbot2_status.ui  xbot2_status_wid.cpp  xbot2_status_wid.h  xbot2_wid.cpp  xbot2_wid.h
src/maintenance/: CMakeLists.txt  maintenance.ui  maintenance_ui_resources.qrc  maintenance_widget.cpp  maintenance_widget.h
src/plugin/: CMakeLists.txt  custom_qt_widget.cpp  custom_qt_widget.h  custom_qt_widget_impl.h
src/qcustomplot/: CMakeLists.txt  qcustom_chart.cpp  qcustom_chart.h  qcustomchart_resources.qrc  right_panel.ui
src/robot_monitoring/: CMakeLists.txt  context.cpp  custom_qt_widget.cpp  custom_qt_widget.h  custom_qt_widget_impl.h
src/rviz/: CMakeLists.txt  rviz_widget.cpp  rviz_widget.h
src/softhand/: CMakeLists.txt  hand_state.ui  softhand.ui  softhand_ui_resources.qrc  softhand_widget.cpp  softhand_widget.h
xbot2_gui/: CMakeLists.txt  ClientEndpoint.js  ClientEndpoint.qml  DeserializationWorker.mjs  PageItem.qml  main.cpp  main.qml  qml.qrc  sharedData.js  websocket_receiver.cpp
xbot2_gui/Audio/: AudioBroadcaster.qml  CMakeLists.txt  Prova.qml  audiosource.cpp  audiosource.h
xbot2_gui/Common/: AspectRatio.qml  CMakeLists.txt  Card.qml  Card1.qml  CheckList.qml  CheckListItem.qml  CommonProperties.qml  DebugRectangle.qml  DelayButtonRound.qml  DoubleSpinBox.qml  DoubleSpinBox1.qml  LayoutClassHelper.qml  MultiColumnLayout.qml  MultiColumnPage.qml  MultiMouseArea.qml  MultiPaneResponsiveLayout.qml  (+4 more)
(+225 files in other folders)
