[metadata]
name = xbot2_gui_server
version = 2.2.3
author = Arturo Laurenzi
author_email = arturo.laurenzi@iit.it
description = Backend for XBot2 QML GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://none
project_urls =
    Bug Tracker = https://none
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires =
    aiohttp
    

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xbot2_gui_server = xbot2_gui_server.main:main
